force-app/main/default/objects/DRE__DRE_Formula__mdt/DRE__DRE_Formula__mdt.object-meta.xml
<CustomObject>
    <label>DRE Formula</label>
    <pluralLabel>DRE Formulas</pluralLabel>
</CustomObject>