force-app/main/default/objects/DRE__DRE_Formula__mdt/fields/DRE__Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>DRE__Apex_Class_Name__c</fullName>
    <inlineHelpText>Apex class name responsible for handling this formula (must extend DREInterface.IFormulaHandler)</inlineHelpText>
    <label>Apex Class Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>