force-app/main/default/objects/DRE__DRE_Formula__mdt/fields/DRE__Description__c.field-meta.xml
<CustomField>
    <fullName>DRE__Description__c</fullName>
    <inlineHelpText>Formula description, to appear in DRE formula editor</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>