force-app/main/default/objects/DRE__DRE_Formula__mdt/fields/DRE__Operand_Size__c.field-meta.xml
<CustomField>
    <fullName>DRE__Operand_Size__c</fullName>
    <label>Operand Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
                <default>true</default>
                <label>One</label>
            </value>
            <value>
                <fullName>One or more</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Two or more</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Three or more</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
            <value>
                <fullName>Four or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>