force-app/main/default/objects/DRE__DRE_Formula__mdt/fields/DRE__Type__c.field-meta.xml
<CustomField>
    <fullName>DRE__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Logic</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>